--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dondmcg/learn-react.git"
+  },
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
